--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dubeshape",
+  "name": "dudeshape",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,9 +10,5 @@
   },
   "devDependencies": {
     "vite": "^6.0.1"
-  },
-  "dependencies": {
-    "jquery": "^3.7.1",
-    "swiper": "^11.1.15"
   }
 }
